--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!-- <link rel="stylesheet" href="style.css"> -->
         <link rel="stylesheet" href= {{ url_for('static', filename='style.css') }}>
+	<!--
         <link rel="shortcut icon" href="https://w7.pngwing.com/pngs/834/28/png-transparent-emoji-car-emoticon-text-messaging-campervans-vehicle.png" type="image/x-icon">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	-->       	
+	<link rel="shortcut icon" href="./casa.png" type="image/x-icon">
+	<link rel="icon" type="image/png" href="./casa.png" sizes="192x192">
+	<link rel="apple-touch-icon" sizes="180x180" href="./casa.png">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
  
     </head>
     <body>
