--- a/templates/index.html
+++ b/templates/index.html
@@ -44,10 +44,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="#fullscreen_shopping">Lista de Compras</a>
               </li>
-   <!--           <li class="nav-item">
-                <a class="nav-link" href="#fullscreen_voz">Recados por Voz</span></a>
+              <li class="nav-item">
+                <a class="nav-link" href="#fullscreen_f1">F1</span></a>
               </li>
-       -->       <li class="nav-item">
+              <li class="nav-item">
                 <a class="nav-link" href="#">Recados <span>&#9888;</span></a>
               </li>
 
